--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     environment:
       - N8N_BASIC_AUTH_ACTIVE=true
       - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=changeme123
+      - N8N_BASIC_AUTH_PASSWORD=Oscarmatilda1
       - N8N_HOST=localhost
       - N8N_PORT=5678
-      - WEBHOOK_URL=https://your-elestio-url
+      - WEBHOOK_URL=https://n8n-ffmpeg-deploy-u49850.vm.elestio.app/
     volumes:
       - n8n_data:/home/node/.n8n
 
